Add offline support and in-app map navigation for shelters

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-EpU534vkRxV6Q38Q42JirN78Is_l-Yg&libraries=geometry,places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDr_VBKyQUmu1SpD81L-qjw3XjgmpVTJN8"></script>
 
   <base href="$FLUTTER_BASE_HREF">
 
